syntax = "proto3";

package test;

message T1{
  int32 a = 1;
}
message T2{
  int64 a = 1;
}
message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string message = 1;
}

service TestService{
  rpc Call (T1) returns (T2) {}
  rpc Hello (HelloRequest) returns (HelloResponse);
}
